--- a/notebooks/test_aggregator.ipynb
+++ b/notebooks/test_aggregator.ipynb
@@ -40,7 +40,19 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -53,25 +65,7 @@
    "execution_count": 5,
    "id": "08cae1da-ed7b-4b3a-8d49-e7a5f7a8a75f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "function/symbol 'fdb_expand_request' not found in library '/Users/math/micromamba/envs/ionbeam/lib/libfdb5.dylib': dlsym(0x8f773200, fdb_expand_request): symbol not found\n",
-      "Error retrieving attribute fdb_expand_request from library\n",
-      "Using fdb5 shared library from /Users/math/micromamba/envs/ionbeam/lib/libfdb5.dylib\n",
-      "Using metkit shared library from /Users/math/micromamba/envs/ionbeam/lib/libmetkit.dylib\n",
-      "\n",
-      "Contents of /Users/math/micromamba/envs/ionbeam/share/metkit/odb/marsrequest.yaml:\n",
-      " ---\n",
-      "PLATFORM: platform\n",
-      "OBSERVATION_VARIABLE: observation_variable\n",
-      "Fields defined in /Users/math/micromamba/envs/ionbeam/share/metkit/language.yaml:\n",
-      " observation_variable platform class type stream expver dataset model repres obsgroup reportype levtype levelist param date hdate offsetdate fcmonth fcperiod time offsettime step anoffset reference number quantile domain frequency direction diagnostic iteration channel ident instrument method origin system\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyfdb\n",
     "import findlibs\n",
@@ -98,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dd2b473c-910c-476f-bbc6-734c7497679f",
    "metadata": {
     "tags": []
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e882c97b-ded6-405c-8bb4-8cb615e95cd5",
    "metadata": {},
    "outputs": [
@@ -212,9 +206,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:micromamba-ionbeam]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-micromamba-ionbeam-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
